# engine

./: .editorconfig  .gitignore  .pre-commit-config.yaml  mypy.ini  pyproject.toml  requirements.txt  server.py  setup.cfg  start.sh
.github/workflows/: build_and_deploy.yml
src/engine/: __init__.py  constants.py  core.py  draw.py  enpyre.py  example.py  graphics.py  input.py  js_interface.py  pyongine.py
src/engine.egg-info/: PKG-INFO  SOURCES.txt
src/examples/: sample.py  sample_circle_by_keys.py  sample_circle_by_time.py  sample_come_come.py
